Added editMode color to the card

--- a/src/index.css
+++ b/src/index.css
@@ -39,11 +39,18 @@ header {
   padding: 40px 50px;
   margin: 20px 0;
   position: relative;
+  transition: all 0.4s linear;
 }
 
 .card.reverse {
   background-color: rgba(0, 0, 0, 0.4);
   color: #fff;
+}
+
+.card.edit-mode {
+  background-color: rgba(144, 144, 144, 0.4);
+  color: #fff;
+  border: 1px dotted #ff6a95;
 }
 
 .card h2 {
